[package]
name = "prevant-api-tests"
version = "0.9.0"
authors = ["Marc Schreiber <marc.schreiber@aixigo.de>"]
repository = "https://github.com/aixigo/PREvant/"
edition = "2018"

[dev-dependencies]
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
testcontainers = "0.16"
tokio = { version = "1.29", features = ["macros"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
