[package]
name = "prevant-api-tests"
version = "0.9.0"
authors = ["Marc Schreiber <marc.schreiber@aixigo.de>"]
repository = "https://github.com/aixigo/PREvant/"
edition = "2018"

[dev-dependencies]
env_logger = "0.11"
exponential-backoff = "2.1.0"
futures = "0.3"
lazy_static = "1.5"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
testcontainers = { version = "0.26", features = ["docker-compose"] }
tokio = { version = "1.47", features = ["macros"] }
uuid = { version = "1.19", features = ["serde", "v4"] }

[features]
# TODO: make sure that the compose tests run in CI
ci = []
