[package]
name = "prevant"
version = "0.9.0"
authors = ["Marc Schreiber <marc.schreiber@aixigo.de>"]
repository = "https://github.com/aixigo/PREvant/"
edition = "2018"

resolver = "2"

[[bin]]
name = "prevant"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
boa_engine = "0.19"
bollard = { version = "0.16", features = ["chrono"] }
bytesize = { version = "1.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "cargo", "help", "usage", "error-context"] }
env_logger = "0.11"
evmap = "10.0"
failure = "0.1"
figment = { version = "0.10", features = ["env", "toml"] }
futures = { version = "0.3", features = ["compat"] }
handlebars = "5.1"
http-api-problem = "0.58"
jira_query = "1.3"
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_24"] }
kube = { version = "0.90", default-features = false, features = ["client", "derive", "rustls-tls"] }
lazy_static = "1.5"
log = "0.4"
multimap = "0.10"
oci-client = "0.12"
pest = "2.6"
pest_derive = "2.6"
regex = "1.10"
regex-syntax = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5", features = ["json"] }
schemars = "0.8"
secstr = { version = "0.5", features = ["serde"] }
serde = "1.0"
serde-value = "0.7"
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
tar = "0.4"
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
yansi = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"
figment = { version = "0.10", features = ["test"] }
sha2 = "0.10"
tempfile = "3.7"

