[package]
name = "prevant"
version = "0.9.0"
authors = ["Marc Schreiber <marc.schreiber@aixigo.de>"]
repository = "https://github.com/aixigo/PREvant/"
edition = "2021"

resolver = "2"

[[bin]]
name = "prevant"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.22"
boa_engine = "0.20"
bollard = { version = "0.19", features = ["chrono"] }
bytesize = { version = "2.0", features = ["serde"] }
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "cargo", "help", "usage", "error-context"] }
dyn-clone = "1.0"
env_logger = "0.11"
evmap = "10.0"
figment = { version = "0.10", features = ["env", "toml"] }
futures = { version = "0.3", features = ["compat"] }
handlebars = "6.3"
http = "1.2"
http-api-problem = "0.60"
hyper = "1.7"
hyper-util = "0.1"
http-body-util = "0.1"
jira_query = "1.6"
jsonschema = "0.33"
# If you adjust the feature to increase the supported K8s version, make sure to
# also adjust the k3d integration job
k8s-openapi = { version = "0.25", default-features = false, features = ["v1_30"] }
kube = { version = "1.1", default-features = false, features = ["client", "derive", "rustls-tls", "ws"] }
lazy_static = "1.5"
log = "0.4"
multimap = "0.10"
oci-client = "0.15"
openidconnect = "4.0"
pest = "2.8"
pest_derive = "2.8"
regex = "1.11"
regex-syntax = "0.8"
reqwest = "0.12"
rocket = { version = "0.5", features = ["json", "secrets"] }
schemars = "0.8"
secstr = { version = "0.5", features = ["serde"] }
serde = "1.0"
serde-value = "0.7"
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.9"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
yansi = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"
figment = { version = "0.10", features = ["test"] }
sha2 = "0.10"
tempfile = "3.19"

